--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.tsx",
 	"scripts": {
 		"start": "webpack-dev-server",
-		"build": "webpack --mode=production"
+		"build": "webpack --mode=production",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"repository": {
 		"type": "git",
@@ -24,6 +26,16 @@
 		"@babel/preset-env": "^7.19.4",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
+		"@mdx-js/react": "^2.1.5",
+		"@storybook/addon-actions": "^6.5.13",
+		"@storybook/addon-essentials": "^6.5.13",
+		"@storybook/addon-interactions": "^6.5.13",
+		"@storybook/addon-links": "^6.5.13",
+		"@storybook/addon-postcss": "^2.0.0",
+		"@storybook/builder-webpack5": "^6.5.13",
+		"@storybook/manager-webpack5": "^6.5.13",
+		"@storybook/react": "^6.5.13",
+		"@storybook/testing-library": "^0.0.13",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"autoprefixer": "^10.4.12",
@@ -38,6 +50,7 @@
 		"postcss-loader": "^7.0.1",
 		"postcss-mixins": "^9.0.4",
 		"postcss-nested": "^6.0.0",
+		"storybook-css-modules-preset": "^1.1.1",
 		"style-loader": "^3.3.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4",
