изменить домашний адрес

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": ".",
+	"homepage": "https://andpigge.github.io/habr/",
 	"name": "habr",
 	"version": "1.0.0",
 	"description": "Habr",
